Added Resposive Alert on Mobile

--- a/CovidDashboard/index.html
+++ b/CovidDashboard/index.html
@@ -11,6 +11,17 @@
     <title>Coronavirus Dashboard</title>
 	<link rel="stylesheet" href="style.css">
 
+	<script language="Javascript">
+    window.onload=function(){
+    var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
+    if (mobile) {
+        alert("This app is not based on Responsive Desogn as it was just a proof of concept. Please use a desktop for the full experience! Thanks.");              
+    } else {
+
+    }
+  }
+  </script>
+
   </head>
   <body>
 	<!--Navbar-->
