--- a/TextDifferenceFinder/index.html
+++ b/TextDifferenceFinder/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
     <title>Hello, world!</title>
+    <script language="Javascript">
+    window.onload=function(){
+    var mobile = (/iphone|ipad|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));
+    if (mobile) {
+        alert("This app is not based on Responsive Desogn as it was just a proof of concept. Please use a desktop for the full experience! Thanks.");              
+    } else {
+
+    }
+  }
+  </script>
+  
   </head>
   <body>
 	<div class="container">
